--- a/app/src/main/res/layout/activity_category.xml
+++ b/app/src/main/res/layout/activity_category.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -17,12 +17,15 @@
         android:layout_marginLeft="20dp"
         />
     <ImageView
+        android:id="@+id/logo"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:src="@drawable/ic_stock_24_logo"
         android:layout_marginTop="-15dp"
+        android:layout_below="@id/arrow_left"
         />
     <TextView
+        android:id="@+id/moment"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="30sp"
@@ -31,9 +34,12 @@
         android:fontFamily="@font/roboto"
         android:textColor="@color/teal_200"
         android:gravity="center"
+        android:layout_below="@id/logo"
         />
 
     <TextView
+        android:id="@+id/descreption"
+        android:layout_below="@id/moment"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
@@ -44,14 +50,28 @@
         android:gravity="center"
         />
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerview_id"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_above="@+id/linear"
+        android:layout_below="@id/descreption"
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="20dp"></androidx.recyclerview.widget.RecyclerView>
+
+
+
+
+
 
    <LinearLayout
+       android:id="@+id/linear"
        android:layout_width="match_parent"
-       android:layout_height="match_parent"
-       android:layout_marginTop="350dp"
+       android:layout_height="wrap_content"
        android:background="#FAFAFA"
        android:orientation="vertical"
-       android:elevation="3dp">
+       android:elevation="3dp"
+       android:layout_alignParentBottom="true">
 
 
     <LinearLayout
@@ -73,6 +93,7 @@
             android:textSize="15sp"
             android:layout_marginTop="40dp"
             android:layout_marginLeft="20dp"
+            android:layout_marginRight="10dp"
             android:textColor="@color/teal_200"
             android:text="@string/info"/>
 
@@ -99,7 +120,7 @@
                android:background="@drawable/button3"/>
 
            <androidx.appcompat.widget.AppCompatButton
-               android:id="@+id/next"
+               android:id="@+id/tohomme"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="50dp"
@@ -121,4 +142,5 @@
 
 
 
-</LinearLayout>
+
+</RelativeLayout>
