--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -6,9 +6,8 @@
     android:layout_height="match_parent"
     android:background="@color/white"
     android:orientation="vertical"
+    android:id="@+id/linearlayout"
     tools:context=".register">
-
-
 
     <ImageView
         android:layout_marginTop="20dp"
@@ -25,6 +24,13 @@
         android:src="@drawable/ic_stock_24_logo"
         android:layout_marginTop="-15dp"
         />
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -47,15 +53,28 @@
         android:gravity="center"
         />
 
-    <androidx.appcompat.widget.AppCompatButton
+    <com.facebook.login.widget.LoginButton
+        android:id="@+id/facebook_login"
+     android:layout_width="match_parent"
+     android:layout_height="50dp"
+        android:layout_marginHorizontal="30dp"
+        android:layout_marginTop="15sp"
+     android:paddingBottom="10dp"
+     android:paddingTop="10dp" />
+
+
+
+    <com.google.android.gms.common.SignInButton
+
+        android:id="@+id/gmail_login"
+        android:layout_below="@id/facebook_login"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:layout_marginHorizontal="30sp"
-        android:layout_marginTop="20dp"
-        android:textColor="@color/white"
-        android:text="@string/register_facebook"
-        android:textAllCaps="false"
-        android:background="@drawable/button_facebook"/>
+        android:layout_marginHorizontal="30dp"
+        android:elevation="3dp"
+        android:layout_marginTop="10dp"
+
+        />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -69,12 +88,12 @@
 
         android:layout_width="100dp"
         android:layout_height="1dp"
-        android:background="@color/teal_200"/>
+        android:background="#F8F8F8"/>
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/choice_email"
+            android:text="@string/choice_phone"
             android:textStyle="italic"
             android:gravity="center"
             android:layout_marginHorizontal="10dp"
@@ -83,19 +102,12 @@
         <View
             android:layout_width="100dp"
             android:layout_height="1dp"
-            android:background="@color/teal_200"/>
+            android:background="#F8F8F8"/>
 
     </LinearLayout>
 
 
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
 
     <TextView
         android:layout_width="match_parent"
@@ -107,43 +119,34 @@
         android:fontFamily="@font/roboto"
         android:layout_marginLeft="30dp"/>
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/email"
-        android:layout_marginHorizontal="30dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="@string/email"
+            <com.google.android.material.textfield.TextInputLayout
+                android:layout_marginHorizontal="30dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/phone_number"
 
-        >
+                >
 
-        <com.google.android.material.textfield.TextInputEditText
-            android:layout_width="match_parent"
-            android:background="@color/white"
-            android:layout_height="wrap_content"
-            android:inputType="textEmailAddress"
-            android:gravity="bottom"
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/phone"
+                    android:layout_width="match_parent"
+                    android:background="@color/white"
+                    android:layout_height="wrap_content"
+                    android:inputType="phone"
+                    android:maxLength="10"
+                    android:gravity="bottom"
 
-            />
+                    />
 
-    </com.google.android.material.textfield.TextInputLayout>
+            </com.google.android.material.textfield.TextInputLayout>
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/password"
-        android:layout_marginHorizontal="30dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="@string/password"
-        >
 
-        <com.google.android.material.textfield.TextInputEditText
-            android:layout_width="match_parent"
-            android:background="@color/white"
-            android:layout_height="wrap_content"
-            android:gravity="bottom"
-            android:inputType="textPassword"
-            />
 
-    </com.google.android.material.textfield.TextInputLayout>
+
+
+
+
+
 
     <TextView
         android:layout_width="match_parent"
@@ -156,7 +159,6 @@
         android:layout_marginLeft="30dp"/>
 
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/name"
         android:layout_marginHorizontal="30dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -165,6 +167,7 @@
         >
 
         <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/name"
             android:layout_width="match_parent"
             android:background="@color/white"
             android:layout_height="wrap_content"
@@ -175,15 +178,15 @@
 
     </com.google.android.material.textfield.TextInputLayout>
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/company"
         android:layout_marginHorizontal="30dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="@string/Entreprise"
+        android:hint="@string/company"
 
         >
 
         <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/company"
             android:layout_width="match_parent"
             android:background="@color/white"
             android:layout_height="wrap_content"
@@ -193,26 +196,27 @@
             />
 
     </com.google.android.material.textfield.TextInputLayout>
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/phone"
-        android:layout_marginHorizontal="30dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="@string/phone_number"
 
-        >
+            <com.google.android.material.textfield.TextInputLayout
+                android:layout_marginHorizontal="30dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/email"
 
-        <com.google.android.material.textfield.TextInputEditText
-            android:layout_width="match_parent"
-            android:background="@color/white"
-            android:layout_height="wrap_content"
-            android:inputType="phone"
-            android:maxLength="10"
-            android:gravity="bottom"
+                >
 
-            />
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/email"
+                    android:layout_width="match_parent"
+                    android:background="@color/white"
+                    android:layout_height="wrap_content"
+                    android:inputType="textEmailAddress"
+                    android:gravity="bottom"
+                    />
 
-    </com.google.android.material.textfield.TextInputLayout>
+            </com.google.android.material.textfield.TextInputLayout>
+
+
     <CheckBox
         android:id="@+id/checkbox"
         android:layout_marginTop="10dp"
@@ -226,13 +230,15 @@
         android:textStyle="bold"/>
 
     <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/register"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_marginHorizontal="30sp"
         android:layout_marginTop="20dp"
         android:textColor="@color/white"
-        android:text="@string/register"
+        android:text="@string/next"
         android:textAllCaps="false"
+        android:fontFamily="@font/roboto"
         android:background="@drawable/button1"/>
 
 
