--- a/app/src/main/res/layout/item_annonce.xml
+++ b/app/src/main/res/layout/item_annonce.xml
@@ -18,18 +18,12 @@
             android:id="@+id/imageview"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentBottom="true"
             android:scaleType="fitStart"
             android:src="@drawable/machine_laver" />
 
         <LinearLayout
             android:layout_width="25dp"
             android:layout_height="25dp"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
             android:layout_marginStart="6dp"
             android:layout_marginTop="10dp"
             android:background="@drawable/button5"
@@ -49,15 +43,14 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
-            android:layout_alignParentStart="true"
             android:text="NEUF"
             android:layout_marginBottom="10dp"
             android:textSize="10sp"
             android:textColor="@color/white"
             android:fontFamily="@font/roboto"
+            android:textAlignment="center"
             android:background="@drawable/text_view_1"
             android:layout_marginStart="6dp"
-            android:gravity="center"
             android:paddingHorizontal="10dp"
             android:paddingVertical="3dp"
             />
