--- a/app/src/main/res/layout/activity_announcement_detail.xml
+++ b/app/src/main/res/layout/activity_announcement_detail.xml
@@ -64,17 +64,17 @@
             android:id="@+id/carouselView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_alignParentTop="true"
             android:layout_alignParentStart="true"
-            android:layout_alignParentBottom="true"
+            android:layout_alignParentTop="true"
             android:layout_alignParentEnd="true"
+            android:layout_alignParentBottom="true"
+            android:background="@drawable/machine"
             app:fillColor="#FFFFFFFF"
             app:pageColor="#00000000"
             app:radius="6dp"
             app:slideInterval="3000"
             app:strokeColor="#FF777777"
-            app:strokeWidth="1dp"
-            android:background="@drawable/machine"/>
+            app:strokeWidth="1dp" />
 
     </RelativeLayout>
 
