--- a/app/src/main/res/layout/activity_verfication_phone_number.xml
+++ b/app/src/main/res/layout/activity_verfication_phone_number.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     android:background="@color/white"
     android:gravity="center"
+    android:id="@+id/linearlayout"
     android:orientation="vertical"
     tools:context=".verfication_phone_number">
 
