--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -44,21 +44,23 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
-    <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/all"
-        android:layout_width="90dp"
-        android:layout_height="50dp"
-        android:background="@drawable/button4"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="20dp"
-        android:textSize="16sp"
-        android:fontFamily="@font/roboto"
-        android:text="@string/all"
-        android:textAllCaps="false"
-        android:gravity="center_vertical"
-        android:padding="14dp"
-        android:textColor="@color/teal_200"
-        android:layout_alignParentStart="true"/>
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/all"
+            style="?android:attr/borderlessButtonStyle"
+            android:layout_width="90dp"
+            android:layout_height="50dp"
+            android:layout_alignParentStart="true"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="20dp"
+            android:background="@drawable/button4"
+            android:fontFamily="@font/roboto"
+            android:gravity="center_vertical"
+            android:padding="14dp"
+            android:text="@string/all"
+            android:textAllCaps="false"
+            android:textColor="@color/teal_200"
+            android:textSize="16sp" />
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/recent"
