--- a/app/src/main/res/layout/activity_feedback.xml
+++ b/app/src/main/res/layout/activity_feedback.xml
@@ -9,7 +9,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="70dp"
+        android:layout_height="55dp"
         android:background="@color/white"
         android:elevation="5dp"
         android:orientation="horizontal"
@@ -19,6 +19,7 @@
             android:id="@+id/back"
             android:layout_width="25dp"
             android:layout_height="25dp"
+            android:padding="5dp"
             android:src="@drawable/ic_arrow_left"
             app:tint="@color/purple_700"
             android:layout_marginStart="16dp"/>
@@ -27,7 +28,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/feedback"
-            android:textSize="22sp"
+            android:textSize="18sp"
             android:layout_marginStart="30dp"
             android:textColor="@color/purple_700"
             android:fontFamily="@font/roboto"
