--- a/app/src/main/res/layout/fragment_profil.xml
+++ b/app/src/main/res/layout/fragment_profil.xml
@@ -8,7 +8,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="70dp"
+        android:layout_height="55dp"
         android:background="@color/white"
         android:elevation="5dp"
         android:orientation="horizontal"
@@ -20,23 +20,26 @@
             android:layout_height="25dp"
             android:src="@drawable/ic_arrow_left"
             app:tint="@color/purple_700"
+            android:padding="5dp"
             android:layout_marginStart="16dp"/>
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/profil"
-            android:textSize="22sp"
+            android:textSize="18sp"
             android:layout_marginStart="30dp"
             android:textColor="@color/purple_700"
             android:fontFamily="@font/roboto"
             />
 
         <ImageView
+            android:id="@+id/settings"
             android:layout_width="match_parent"
             android:layout_height="30dp"
             android:src="@drawable/ic_settings"
             android:scaleType="fitEnd"
+            android:padding="5dp"
             android:layout_marginEnd="20dp"
             />
     </LinearLayout>
@@ -80,7 +83,7 @@
                 android:fontFamily="@font/roboto"
                 android:textColor="#003569"/>
             <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/to_profile"
+                android:id="@+id/to_edit_profile"
                 android:layout_width="120dp"
                 android:layout_height="38dp"
                 android:background="@drawable/button7"
@@ -144,7 +147,7 @@
         android:id="@+id/setting"
         android:layout_width="match_parent"
         android:layout_height="65dp"
-        android:text="Parametres"
+        android:text="@string/settings"
         android:layout_marginEnd="30dp"
         android:textSize="18sp"
         android:fontFamily="@font/roboto"
